Created Login Page layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Fuse</string>
+    <string name="username_textview">Enter username</string>
+    <string name="password_textview">Enter password</string>
+    <string name="forgotpassword_textview">Forgot Password?</string>
+    <string name="login_button">Login</string>
+    <string name="register_button">Register</string>
 </resources>
